--- a/index.html
+++ b/index.html
@@ -74,372 +74,4 @@
     }
     .btn.ghost{background:transparent;box-shadow:none}
     .btn.active{
-      border-color:rgba(14,165,164,.30);
-      background:rgba(14,165,164,.08);
-    }
-    .chip{
-      padding:10px 14px;border-radius:999px;border:1px solid var(--line);
-      background:rgba(255,255,255,.75);color:rgba(16,24,40,.70);
-      font-weight:900;display:none;max-width:260px;
-      overflow:hidden;text-overflow:ellipsis;
-    }
-
-    /* HERO */
-    .hero{
-      margin-top:14px;
-      background:linear-gradient(180deg, rgba(255,255,255,.92), rgba(255,255,255,.70));
-      border:1px solid var(--line);
-      border-radius:22px;
-      padding:18px;
-      box-shadow:var(--shadow2);
-    }
-    h1{margin:0;font-size:30px;letter-spacing:-.4px;line-height:1.15}
-    .lead{
-      margin:10px 0 0;
-      color:var(--muted);
-      line-height:1.75;
-      font-weight:650;
-      max-width:920px
-    }
-    .cta{display:flex;gap:10px;flex-wrap:wrap;margin-top:14px}
-    .pillrow{display:flex;gap:10px;flex-wrap:wrap;margin-top:12px}
-    .pill{
-      display:inline-flex;gap:8px;align-items:center;
-      padding:8px 10px;border-radius:999px;border:1px solid var(--line);
-      background:rgba(255,255,255,.70);
-      color:rgba(16,24,40,.62);font-size:12px;font-weight:850;
-      white-space:nowrap;
-    }
-
-    /* GRID */
-    .grid{display:grid;grid-template-columns:1.25fr .75fr;gap:14px;margin-top:14px}
-    @media(max-width:980px){.grid{grid-template-columns:1fr}}
-    .card{
-      background:var(--card);
-      border:1px solid var(--line);
-      border-radius:18px;
-      padding:16px;
-      box-shadow:var(--shadow);
-    }
-    .title{font-weight:1000;margin:0 0 8px}
-    .small{font-size:12.5px;color:var(--muted);line-height:1.75}
-    .list{margin:10px 0 0;padding-left:18px;color:rgba(16,24,40,.62);line-height:1.85;font-size:12.8px}
-    .kgrid{display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-top:10px}
-    @media(max-width:560px){.kgrid{grid-template-columns:1fr}}
-    .k{
-      border:1px solid var(--line);background:rgba(255,255,255,.72);
-      border-radius:16px;padding:12px;
-    }
-    .k .h{font-size:12px;color:var(--muted);font-weight:950;text-transform:uppercase;letter-spacing:.08em}
-    .k .v{margin-top:8px;font-size:18px;font-weight:1000;letter-spacing:-.2px}
-    .divider{height:1px;background:var(--line);margin:12px 0}
-
-    /* REVIEWS */
-    .reviews{display:grid;gap:10px;margin-top:10px}
-    .review{
-      border:1px solid var(--line);
-      background:rgba(255,255,255,.78);
-      border-radius:16px;
-      padding:12px;
-    }
-    .meta{display:flex;justify-content:space-between;gap:10px;flex-wrap:wrap;align-items:center}
-    .tag{
-      padding:6px 10px;border-radius:999px;border:1px solid var(--line);
-      background:rgba(255,255,255,.90);color:rgba(16,24,40,.62);font-size:12px;font-weight:950;
-    }
-    .stars{font-weight:1000;letter-spacing:.8px}
-    footer{
-      margin:16px 2px 0;
-      color:var(--muted);
-      font-size:12.5px;
-      line-height:1.75;
-      padding:6px 0 18px;
-    }
-    .footrow{
-      display:flex;justify-content:space-between;gap:10px;flex-wrap:wrap;align-items:center
-    }
-    .footlinks{display:flex;gap:12px;flex-wrap:wrap;align-items:center}
-  </style>
-</head>
-
-<body>
-  <div class="wrap">
-
-    <!-- NAV (single, clean, premium) -->
-    <div class="topbar" role="navigation" aria-label="Primary">
-      <div class="navrow">
-        <div class="brand">
-          <div class="logo" aria-hidden="true">PP</div>
-          <div>
-            <div class="brandtitle">ProfitPilot</div>
-            <div class="brandsub">Independent tool by Ukwebtools</div>
-          </div>
-        </div>
-
-        <div class="navlinks" aria-label="Site">
-          <a class="btn active" href="index.html">Home</a>
-          <a class="btn" href="pricing.html">Pricing</a>
-          <a class="btn" href="reviews.html">Reviews</a>
-          <a class="btn" href="help.html">How to use</a>
-        </div>
-
-        <div class="navactions" aria-label="Account">
-          <span class="chip" id="userChip">—</span>
-          <a class="btn primary" id="primaryNavCta" href="login.html">Start free trial</a>
-          <a class="btn" id="logoutBtn" href="#" style="display:none">Log out</a>
-        </div>
-      </div>
-
-      <!-- SEO Breadcrumb JSON-LD -->
-      <script type="application/ld+json">
-      {
-        "@context":"https://schema.org",
-        "@type":"BreadcrumbList",
-        "itemListElement":[
-          {"@type":"ListItem","position":1,"name":"Ukwebtools","item":"https://ukwebtools.com/"},
-          {"@type":"ListItem","position":2,"name":"ProfitPilot","item":"https://profitpilot.ukwebtools.com/index.html"}
-        ]
-      }
-      </script>
-    </div>
-
-    <!-- HERO -->
-    <div class="hero">
-      <h1>Price smarter. Protect your margin. Scale with confidence.</h1>
-      <p class="lead">
-        Estimate profit and margin, reverse-calculate the selling price you need for a target profit,
-        and run bulk checks across multiple products — using only your own inputs.
-      </p>
-
-      <div class="cta">
-        <a class="btn primary" href="login.html" id="primaryHeroCta">Start free trial</a>
-        <a class="btn" href="pricing.html">View pricing</a>
-        <a class="btn ghost" href="https://ukwebtools.com/">← Ukwebtools</a>
-      </div>
-
-      <div class="pillrow">
-        <span class="pill">5-day trial</span>
-        <span class="pill">One-time PRO unlock</span>
-        <span class="pill">No subscriptions</span>
-        <span class="pill">Your inputs only</span>
-      </div>
-    </div>
-
-    <div class="grid">
-      <!-- LEFT -->
-      <div class="card">
-        <div class="title">How it works (30 seconds)</div>
-        <ul class="list">
-          <li>Choose a currency + optional FX (manual rate).</li>
-          <li>Enter price, costs, fees, ads, and return assumptions.</li>
-          <li>See profit, margin, break-even, and simple risk hints.</li>
-          <li>Use <b>Reverse</b> for target profit → required selling price.</li>
-          <li>Use <b>Bulk</b> table to check multiple listings fast.</li>
-        </ul>
-
-        <div class="divider"></div>
-
-        <div class="title">Trial vs PRO</div>
-        <div class="kgrid">
-          <div class="k">
-            <div class="h">Trial</div>
-            <div class="v">Validate fast</div>
-            <ul class="list" style="margin-top:8px">
-              <li>Profit mode: unlimited</li>
-              <li>Reverse: limited access</li>
-              <li>Bulk: limited rows/runs</li>
-            </ul>
-          </div>
-
-          <div class="k" style="border-color:rgba(14,165,164,.28);background:rgba(14,165,164,.06)">
-            <div class="h">PRO</div>
-            <div class="v">Unlimited tools</div>
-            <ul class="list" style="margin-top:8px">
-              <li>Unlimited Reverse + Bulk</li>
-              <li>Insights (break-even, targets, hints)</li>
-              <li>Export/share (where enabled)</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="divider"></div>
-
-        <div class="small">
-          <b>Disclaimer:</b> Independent tool. Not affiliated with or endorsed by any marketplace, platform, or payment provider.
-          Estimates only: outputs depend on your inputs and assumptions; no profit guarantees. Not financial, legal, or tax advice.
-        </div>
-      </div>
-
-      <!-- RIGHT -->
-      <div>
-        <div class="card">
-          <div class="title">PRO unlock</div>
-          <div class="small">
-            PRO is a <b>one-time purchase</b> unlock. No subscriptions.
-          </div>
-
-          <div class="divider"></div>
-
-          <div class="k">
-            <div class="h">Current price</div>
-            <div class="v" id="priceLine">£9.99</div>
-            <div class="small">Full limits and comparison are on the Pricing page.</div>
-          </div>
-
-          <div class="cta" style="margin-top:12px">
-            <a class="btn primary" id="buyBtn" href="#" target="_blank" rel="noopener">Buy PRO</a>
-            <a class="btn" href="pricing.html">See pricing & limits</a>
-          </div>
-        </div>
-
-        <div class="card" style="margin-top:14px">
-          <div class="title">Public feedback</div>
-          <div class="small" id="ratingSummary">Loading…</div>
-
-          <div class="reviews" id="reviews">
-            <div class="small">Loading reviews…</div>
-          </div>
-
-          <div class="divider"></div>
-
-          <div class="cta">
-            <a class="btn" href="reviews.html">See all reviews</a>
-            <a class="btn" id="reviewCta" href="app.html">Log in to submit/edit review</a>
-          </div>
-
-          <div class="small" style="margin-top:10px">
-            You can <b>view</b> reviews without logging in. To submit or edit a review, log in from the app.
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <footer>
-      <div class="divider"></div>
-      <div class="footrow">
-        <div>© <span id="yr"></span> Ukwebtools • ProfitPilot</div>
-        <div class="footlinks">
-          <a href="privacy.html">Privacy</a>
-          <a href="terms.html">Terms</a>
-        </div>
-      </div>
-    </footer>
-
-  </div>
-
-<script type="module">
-  import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
-
-  const SUPABASE_URL = "https://xsigsftvfknefpdfsyae.supabase.co";
-  const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhzaWdzZnR2ZmtuZWZwZGZzeWFlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyNzY4NjksImV4cCI6MjA4NTg1Mjg2OX0.Jkkh9Jd46saYBVipN8bxbWhjmhG6mgaFgtTpirKUAWg";
-  const supabase = createClient(SUPABASE_URL, SUPABASE_ANON);
-
-  // Checkout link (swap to Paddle later)
-  const CHECKOUT_URL = "https://stonevia.gumroad.com/l/goddhg";
-  document.getElementById("buyBtn").href = CHECKOUT_URL;
-
-  document.getElementById("yr").textContent = new Date().getFullYear();
-
-  // Auth UI (single CTA across nav + hero)
-  const userChip = document.getElementById("userChip");
-  const navCta = document.getElementById("primaryNavCta");
-  const heroCta = document.getElementById("primaryHeroCta");
-  const logoutBtn = document.getElementById("logoutBtn");
-  const reviewCta = document.getElementById("reviewCta");
-
-  async function refreshAuthUI(){
-    const { data: { session } } = await supabase.auth.getSession();
-    const email = session?.user?.email;
-
-    if (email){
-      userChip.style.display = "inline-flex";
-      userChip.textContent = email;
-
-      navCta.textContent = "Open app";
-      navCta.href = "app.html";
-
-      heroCta.textContent = "Open app";
-      heroCta.href = "app.html";
-
-      logoutBtn.style.display = "inline-flex";
-      reviewCta.href = "app.html";
-    } else {
-      userChip.style.display = "none";
-
-      navCta.textContent = "Start free trial";
-      navCta.href = "login.html";
-
-      heroCta.textContent = "Start free trial";
-      heroCta.href = "login.html";
-
-      logoutBtn.style.display = "none";
-      reviewCta.href = "app.html";
-    }
-  }
-
-  logoutBtn.addEventListener("click", async (e)=>{
-    e.preventDefault();
-    await supabase.auth.signOut();
-    location.href = "index.html";
-  });
-
-  await refreshAuthUI();
-  supabase.auth.onAuthStateChange(() => refreshAuthUI());
-
-  // Reviews (public)
-  function stars(n){
-    n = Math.max(0, Math.min(5, Math.round(n)));
-    return "★".repeat(n) + "☆".repeat(5-n);
-  }
-
-  async function loadReviews(){
-    const summary = document.getElementById("ratingSummary");
-    const box = document.getElementById("reviews");
-
-    const { count, error: countErr } = await supabase
-      .from("reviews")
-      .select("*", { count: "exact", head: true });
-
-    const { data, error } = await supabase
-      .from("reviews")
-      .select("created_at,name,rating,category,message")
-      .order("created_at", { ascending: false })
-      .limit(6);
-
-    if (countErr || error){
-      summary.textContent = "Could not load reviews right now.";
-      box.innerHTML = `<div class="small">If this keeps happening, check Supabase RLS for public read on <b>reviews</b>.</div>`;
-      return;
-    }
-
-    const total = count || 0;
-    summary.textContent = total ? `${total} public review(s)` : "No reviews yet";
-
-    if (!data || data.length === 0){
-      box.innerHTML = `<div class="small">Be the first to leave a review (log in from the app).</div>`;
-      return;
-    }
-
-    box.innerHTML = "";
-    data.forEach(r=>{
-      const div = document.createElement("div");
-      div.className = "review";
-      const safeMsg = String(r.message || "").replaceAll("<","&lt;").replaceAll(">","&gt;");
-      div.innerHTML = `
-        <div class="meta">
-          <div class="stars">${stars(r.rating)}</div>
-          <span class="tag">${(r.category || "General")}</span>
-          <span class="small">${new Date(r.created_at).toLocaleDateString()}</span>
-        </div>
-        <div class="small" style="margin-top:8px">
-          <b>${(r.name || "Anonymous")}</b> — ${safeMsg}
-        </div>
-      `;
-      box.appendChild(div);
-    });
-  }
-
-  loadReviews();
-</script>
-</body>
-</html>
+      border-color:rg
