--- a/signup.html
+++ b/signup.html
@@ -4,241 +4,249 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Sign up — ProfitPilot</title>
-  <meta name="description" content="Create your ProfitPilot account.">
-  <link rel="icon" href="https://ukwebtools.com/favicon.svg" type="image/svg+xml">
   <meta name="robots" content="noindex,nofollow">
+  <link rel="icon" href="https://ukwebtools.com/favicon.svg" type="image/svg+xml">
 
   <style>
-    :root{
-      --bg:#f6f8fb; --bg2:#eef2ff; --txt:#0b1220; --muted:#5b6474;
-      --card:rgba(255,255,255,.92); --line:rgba(16,24,40,.10);
-      --accent:#0ea5a4; --accent2:#4f46e5;
-      --shadow:0 12px 34px rgba(16,24,40,.10);
-    }
+    :root{--bg:#0b0f14;--card:#111826;--card2:#0e1521;--txt:#eaf0ff;--muted:#9aa7bd;--line:rgba(255,255,255,.08);--accent:#5eead4;}
     *{box-sizing:border-box}
-    body{
-      margin:0;
-      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-      color:var(--txt);
-      background:
-        radial-gradient(900px 520px at 20% 0%, rgba(14,165,164,.14), transparent 55%),
-        radial-gradient(900px 520px at 80% 0%, rgba(79,70,229,.10), transparent 55%),
-        linear-gradient(180deg, var(--bg2), var(--bg));
-      min-height:100vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:18px;
-    }
-    a{color:var(--accent);text-decoration:none}
-    a:hover{text-decoration:underline}
+    body{margin:0;font-family:system-ui;background:var(--bg);color:var(--txt)}
+    .wrap{max-width:520px;margin:40px auto;padding:0 14px}
 
+    /* Reuse your login look */
     .card{
-      width:100%;
-      max-width:520px;
-      background:var(--card);
-      border:1px solid var(--line);
-      border-radius:22px;
-      box-shadow:var(--shadow);
-      padding:18px;
+      background:linear-gradient(180deg,rgba(94,234,212,.10),transparent 60%),var(--card);
+      border:1px solid var(--line);border-radius:18px;padding:20px
     }
-    .top{
-      display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap;
-      margin-bottom:10px;
-    }
-    .brand{
-      display:flex;align-items:center;gap:10px;
-    }
-    .logo{
-      width:40px;height:40px;border-radius:14px;
-      background:linear-gradient(135deg, rgba(14,165,164,.20), rgba(79,70,229,.16));
-      border:1px solid var(--line);
-      display:flex;align-items:center;justify-content:center;
-      font-weight:1000; user-select:none;
-    }
-    .brandtitle{font-weight:1000;line-height:1.05}
-    .brandsub{font-size:12px;color:var(--muted);font-weight:700;margin-top:3px}
-
-    h1{margin:12px 0 6px;font-size:22px;letter-spacing:-.3px}
-    .lead{margin:0 0 14px;color:var(--muted);line-height:1.7;font-size:13px}
-
-    .row{display:grid;gap:10px}
-    label{font-size:12px;color:rgba(16,24,40,.70);font-weight:900}
-    input{
-      width:100%;
-      padding:12px 12px;
-      border-radius:14px;
-      border:1px solid var(--line);
-      background:rgba(255,255,255,.92);
-      font-weight:750;
-      outline:none;
-    }
-    input:focus{
-      border-color:rgba(14,165,164,.35);
-      box-shadow:0 0 0 4px rgba(14,165,164,.10);
-    }
-
-    .btnrow{display:flex;gap:10px;flex-wrap:wrap;margin-top:12px}
+    h2{margin:0 0 10px}
+    input{width:100%;padding:12px;border-radius:14px;border:1px solid var(--line);background:var(--card2);color:var(--txt);outline:none}
+    input:focus{border-color:rgba(94,234,212,.35)}
+    label{font-size:12px;color:var(--muted);margin-top:14px;display:block}
     .btn{
-      padding:10px 14px;border-radius:999px;border:1px solid var(--line);
-      background:rgba(255,255,255,.92);color:var(--txt);
-      font-weight:900;
+      width:100%;margin-top:14px;padding:12px;border-radius:999px;
+      border:1px solid rgba(255,255,255,.1);
+      background:rgba(255,255,255,.03);color:var(--txt);cursor:pointer
+    }
+    .btn.primary{background:rgba(94,234,212,.12);border-color:rgba(94,234,212,.35)}
+    .small{font-size:12px;color:var(--muted);margin-top:12px;line-height:1.5}
+    a{color:var(--accent);text-decoration:none}
+  </style>
+
+  <!-- PROFITPILOT: UNIVERSAL NAV + BREADCRUMBS -->
+  <style>
+    .pp-navwrap{max-width:1200px;margin:0 auto;padding:14px 16px;position:relative;z-index:50}
+    .pp-nav{display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap}
+    .pp-left,.pp-right{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
+    .pp-btn{
+      padding:10px 14px;border-radius:999px;border:1px solid rgba(16,24,40,.10);
+      background:#fff;font-weight:800;text-decoration:none;color:#0b1220;
       box-shadow:0 8px 18px rgba(16,24,40,.06);
-      display:inline-flex;gap:8px;align-items:center;white-space:nowrap;
-      cursor:pointer;
+      display:inline-flex;gap:8px;align-items:center;
       transition:transform .08s ease;
     }
-    .btn:hover{transform:translateY(-1px)}
-    .btn.primary{
+    .pp-btn:hover{transform:translateY(-1px)}
+    .pp-btn:active{transform:translateY(0)}
+    .pp-primary{
       border:none;color:#fff;
-      background:linear-gradient(135deg,var(--accent),var(--accent2));
-      box-shadow:0 16px 34px rgba(79,70,229,.16);
+      background:linear-gradient(135deg,#0ea5a4,#4f46e5);
+      box-shadow:0 14px 28px rgba(79,70,229,.16);
     }
-    .btn.ghost{background:transparent;box-shadow:none}
-
-    .msg{
-      margin-top:12px;
-      padding:10px 12px;
-      border-radius:14px;
-      border:1px solid var(--line);
-      background:rgba(255,255,255,.80);
-      color:rgba(16,24,40,.75);
-      font-size:12.8px;
-      line-height:1.6;
+    .pp-active{
+      border-color:rgba(14,165,164,.35);
+      background:rgba(14,165,164,.08);
+    }
+    .pp-crumbs{
+      margin-top:10px;
+      font-size:12.5px;
+      color:rgba(255,255,255,.70);
+      display:flex;gap:6px;flex-wrap:wrap;align-items:center;
+    }
+    .pp-crumbs a{color:rgba(94,234,212,.95);font-weight:800;text-decoration:none}
+    .pp-sep{opacity:.55}
+    .pp-user{
+      padding:10px 14px;border-radius:999px;border:1px solid rgba(255,255,255,.10);
+      background:rgba(255,255,255,.06);
+      color:rgba(255,255,255,.80);
+      font-weight:800;
       display:none;
-      white-space:pre-wrap;
+      max-width:260px;
+      overflow:hidden;text-overflow:ellipsis;
+      white-space:nowrap;
     }
-    .msg.error{
-      border-color:rgba(239,68,68,.25);
-      background:rgba(239,68,68,.08);
-    }
-    .fine{
-      margin-top:12px;
-      color:rgba(16,24,40,.55);
-      font-size:12px;
-      line-height:1.6;
-    }
-    .fine a{font-weight:900}
   </style>
 </head>
 
 <body>
-  <div class="card">
-    <div class="top">
-      <div class="brand">
-        <div class="logo" aria-hidden="true">PP</div>
-        <div>
-          <div class="brandtitle">ProfitPilot</div>
-          <div class="brandsub">Create your account</div>
-        </div>
+
+  <!-- PROFITPILOT NAV -->
+  <div class="pp-navwrap" role="navigation" aria-label="Primary">
+    <div class="pp-nav">
+      <div class="pp-left">
+        <a class="pp-btn" href="https://ukwebtools.com/" data-nav="ukwebtools">← Ukwebtools</a>
+        <a class="pp-btn" href="index.html" data-nav="home">Home</a>
+        <a class="pp-btn" href="reviews.html" data-nav="reviews">Reviews</a>
+        <a class="pp-btn" href="privacy.html" data-nav="privacy">Privacy</a>
+        <a class="pp-btn" href="terms.html" data-nav="terms">Terms</a>
+        <a class="pp-btn" href="faq.html" data-nav="faq">FAQ</a>
       </div>
-      <a class="btn ghost" href="https://ukwebtools.com/">← Ukwebtools</a>
+
+      <div class="pp-right">
+        <span class="pp-user" id="ppUserChip">Signed in</span>
+
+        <!-- Signed OUT -->
+        <a class="pp-btn" id="ppLoginBtn" href="login.html">Log in</a>
+        <a class="pp-btn pp-primary pp-active" id="ppSignupBtn" href="signup.html">Sign up</a>
+
+        <!-- Signed IN -->
+        <a class="pp-btn pp-primary" id="ppOpenBtn" href="app.html" style="display:none">Open app</a>
+        <a class="pp-btn" id="ppLogoutBtn" href="#" style="display:none">Log out</a>
+      </div>
     </div>
 
-    <h1>Sign up</h1>
-    <p class="lead">Use an email and password. You can log in immediately (or confirm your email if enabled).</p>
+    <div class="pp-crumbs" aria-label="Breadcrumb">
+      <a href="https://ukwebtools.com/">Ukwebtools</a>
+      <span class="pp-sep">›</span>
+      <a href="index.html">ProfitPilot</a>
+      <span class="pp-sep">›</span>
+      <span id="ppCrumbCurrent">Sign up</span>
+    </div>
 
-    <form id="form" class="row">
-      <div>
-        <label for="email">Email</label>
-        <input id="email" type="email" autocomplete="email" required placeholder="you@example.com"/>
+    <script id="ppBreadcrumbJson" type="application/ld+json"></script>
+  </div>
+  <!-- END NAV -->
+
+  <div class="wrap">
+    <div class="card">
+      <h2>ProfitPilot</h2>
+      <p class="small">Create an account. If email confirmation is enabled, you’ll be asked to verify your email before logging in.</p>
+
+      <label>Email</label>
+      <input id="email" type="email" placeholder="you@example.com" autocomplete="email">
+
+      <label>Password</label>
+      <input id="password" type="password" placeholder="Minimum 8 characters" autocomplete="new-password">
+
+      <label>Confirm password</label>
+      <input id="password2" type="password" placeholder="Repeat password" autocomplete="new-password">
+
+      <button class="btn primary" id="create">Create account</button>
+      <button class="btn" id="goLogin">I already have an account</button>
+
+      <div class="small" id="msg">—</div>
+
+      <div class="small" style="margin-top:10px">
+        By signing up, you agree to the <a href="terms.html">Terms</a> and <a href="privacy.html">Privacy</a>.
       </div>
-
-      <div>
-        <label for="password">Password</label>
-        <input id="password" type="password" autocomplete="new-password" minlength="8" required placeholder="Minimum 8 characters"/>
-      </div>
-
-      <div>
-        <label for="password2">Confirm password</label>
-        <input id="password2" type="password" autocomplete="new-password" minlength="8" required placeholder="Repeat password"/>
-      </div>
-
-      <div class="btnrow">
-        <button class="btn primary" id="signupSubmit" type="submit">Create account</button>
-        <a class="btn" href="login.html">Log in instead</a>
-        <a class="btn ghost" href="index.html">Back to home</a>
-      </div>
-    </form>
-
-    <div id="msg" class="msg"></div>
-
-    <div class="fine">
-      By creating an account you agree to the <a href="terms.html">Terms</a> and <a href="privacy.html">Privacy</a>.
     </div>
   </div>
 
 <script type="module">
   import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
 
+  // SAME credentials as login.html (no broken placeholders)
   const SUPABASE_URL = "https://xsigsftvfknefpdfsyae.supabase.co";
   const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhzaWdzZnR2ZmtuZWZwZGZzeWFlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyNzY4NjksImV4cCI6MjA4NTg1Mjg2OX0.Jkkh9Jd46saYBVipN8bxbWhjmhG6mgaFgtTpirKUAWg";
   const supabase = createClient(SUPABASE_URL, SUPABASE_ANON);
 
-  const form = document.getElementById("form");
-  const emailEl = document.getElementById("email");
-  const passEl = document.getElementById("password");
-  const pass2El = document.getElementById("password2");
   const msg = document.getElementById("msg");
-  const btn = document.getElementById("signupSubmit");
+  const emailEl = document.getElementById("email");
+  const passwordEl = document.getElementById("password");
+  const password2El = document.getElementById("password2");
 
-  function showMessage(text, isError=false){
-    msg.style.display = "block";
-    msg.classList.toggle("error", isError);
-    msg.textContent = text;
-  }
+  function setMsg(text){ msg.textContent = text; }
 
-  form.addEventListener("submit", async (e) => {
-    e.preventDefault();
-    msg.style.display = "none";
-
-    const email = emailEl.value.trim();
-    const password = passEl.value;
-    const password2 = pass2El.value;
-
-    if (password !== password2){
-      showMessage("Passwords do not match.", true);
-      return;
-    }
-You may use email confirmation; if enabled, the user must confirm.
-    btn.disabled = true;
-    btn.textContent = "Creating…";
-
-    try{
-      const { data, error } = await supabase.auth.signUp({
-        email,
-        password,
-        options: {
-          emailRedirectTo: "https://profitpilot.ukwebtools.com/login.html"
-        }
-      });
-
-      if (error){
-        showMessage(error.message || "Sign up failed.", true);
-        return;
-      }
-
-      // If email confirmation is ON, session will usually be null.
-      if (!data?.session){
-        showMessage(
-          "Account created.\n\nCheck your email to confirm your address, then log in.",
-          false
-        );
-      } else {
-        // Email confirmation OFF: session exists, go to app
-        location.href = "app.html";
-      }
-    } finally {
-      btn.disabled = false;
-      btn.textContent = "Create account";
-    }
+  // Breadcrumb JSON-LD (kept correct + non-broken)
+  const base = "https://profitpilot.ukwebtools.com/";
+  document.getElementById("ppBreadcrumbJson").textContent = JSON.stringify({
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Ukwebtools","item":"https://ukwebtools.com/"},
+      {"@type":"ListItem","position":2,"name":"ProfitPilot","item": base + "index.html"},
+      {"@type":"ListItem","position":3,"name":"Sign up","item": base + "signup.html"}
+    ]
   });
 
-  // If already signed in, go straight to app
-  const { data: { session } } = await supabase.auth.getSession();
-  if (session?.user){
-    location.href = "app.html";
+  // Nav auth UI
+  const userChip = document.getElementById("ppUserChip");
+  const loginBtn = document.getElementById("ppLoginBtn");
+  const signupBtn = document.getElementById("ppSignupBtn");
+  const openBtn = document.getElementById("ppOpenBtn");
+  const logoutBtn = document.getElementById("ppLogoutBtn");
+
+  async function refreshAuthUI(){
+    const { data: { session } } = await supabase.auth.getSession();
+    if (session?.user?.email){
+      userChip.style.display = "inline-flex";
+      userChip.textContent = session.user.email;
+
+      loginBtn.style.display = "none";
+      signupBtn.style.display = "none";
+
+      openBtn.style.display = "inline-flex";
+      logoutBtn.style.display = "inline-flex";
+    } else {
+      userChip.style.display = "none";
+
+      loginBtn.style.display = "inline-flex";
+      signupBtn.style.display = "inline-flex";
+
+      openBtn.style.display = "none";
+      logoutBtn.style.display = "none";
+    }
   }
+
+  logoutBtn.addEventListener("click", async (e)=>{
+    e.preventDefault();
+    await supabase.auth.signOut();
+    location.href = "login.html";
+  });
+
+  // If already signed in, go to app
+  const { data: { session } } = await supabase.auth.getSession();
+  if (session?.user){ location.href = "app.html"; }
+
+  await refreshAuthUI();
+  supabase.auth.onAuthStateChange(() => refreshAuthUI());
+
+  // Page buttons
+  document.getElementById("goLogin").addEventListener("click", () => {
+    location.href = "login.html";
+  });
+
+  document.getElementById("create").addEventListener("click", async () => {
+    const email = emailEl.value.trim();
+    const password = passwordEl.value;
+    const password2 = password2El.value;
+
+    if (!email) { setMsg("Please enter your email."); return; }
+    if (!password || password.length < 8) { setMsg("Password must be at least 8 characters."); return; }
+    if (password !== password2) { setMsg("Passwords do not match."); return; }
+
+    setMsg("Creating account…");
+
+    const { data, error } = await supabase.auth.signUp({
+      email,
+      password,
+      options: {
+        emailRedirectTo: "https://profitpilot.ukwebtools.com/login.html"
+      }
+    });
+
+    if (error){
+      setMsg(error.message);
+      return;
+    }
+
+    // If confirmation is ON, session is usually null. Send to verify page like your login flow.
+    localStorage.setItem("pp_pending_email", email);
+
+    if (!data?.session){
+      location.href = "verify.html";
+    } else {
+      location.href = "app.html";
+    }
+  });
 </script>
 </body>
 </html>
