--- a/login.html
+++ b/login.html
@@ -1,79 +1,12 @@
-<!-- UNIVERSAL NAVIGATION -->
-<div style="
-  max-width:1200px;
-  margin:0 auto;
-  padding:14px 16px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  gap:12px;
-  flex-wrap:wrap;
-">
-
-  <!-- LEFT SIDE -->
-  <div style="display:flex;gap:10px;flex-wrap:wrap;align-items:center">
-    <a href="https://ukwebtools.com/"
-       style="
-        padding:10px 14px;
-        border-radius:999px;
-        border:1px solid rgba(16,24,40,.10);
-        background:#fff;
-        font-weight:700;
-        text-decoration:none;
-        color:#0b1220;
-       ">
-      ← Ukwebtools
-    </a>
-
-    <a href="index.html"
-       style="
-        padding:10px 14px;
-        border-radius:999px;
-        border:1px solid rgba(16,24,40,.10);
-        background:#fff;
-        font-weight:700;
-        text-decoration:none;
-        color:#0b1220;
-       ">
-      Home
-    </a>
-
-    <a href="privacy.html"
-       style="
-        padding:10px 14px;
-        border-radius:999px;
-        border:1px solid rgba(16,24,40,.10);
-        background:#fff;
-        font-weight:700;
-        text-decoration:none;
-        color:#0b1220;
-       ">
-      Privacy
-    </a>
-
-    <a href="terms.html"
-       style="
-        padding:10px 14px;
-        border-radius:999px;
-        border:1px solid rgba(16,24,40,.10);
-        background:#fff;
-        font-weight:700;
-        text-decoration:none;
-        color:#0b1220;
-       ">
-      Terms
-    </a>
-  </div>
-
-</div>
-<!-- END NAV -->
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Login — ProfitPilot</title>
+  <meta name="robots" content="noindex,nofollow">
   <link rel="icon" href="https://ukwebtools.com/favicon.svg" type="image/svg+xml">
+
   <style>
     :root{--bg:#0b0f14;--card:#111826;--card2:#0e1521;--txt:#eaf0ff;--muted:#9aa7bd;--line:rgba(255,255,255,.08);--accent:#5eead4;}
     *{box-sizing:border-box}
@@ -95,41 +28,129 @@
     .btn.primary{background:rgba(94,234,212,.12);border-color:rgba(94,234,212,.35)}
     .small{font-size:12px;color:var(--muted);margin-top:12px;line-height:1.5}
     a{color:var(--accent);text-decoration:none}
+    a:hover{text-decoration:underline}
+
+    /* PROFITPILOT NAV (single, clean) */
+    .pp-navwrap{max-width:1200px;margin:0 auto;padding:14px 16px;position:relative;z-index:50}
+    .pp-nav{display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap}
+    .pp-left,.pp-right{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
+    .pp-btn{
+      padding:10px 14px;border-radius:999px;border:1px solid rgba(255,255,255,.10);
+      background:rgba(255,255,255,.06);font-weight:800;text-decoration:none;color:rgba(255,255,255,.92);
+      display:inline-flex;gap:8px;align-items:center;
+      transition:transform .08s ease;
+    }
+    .pp-btn:hover{transform:translateY(-1px)}
+    .pp-btn:active{transform:translateY(0)}
+    .pp-primary{
+      border:none;color:#0b1220;
+      background:linear-gradient(135deg,#5eead4,#60a5fa);
+      box-shadow:0 14px 28px rgba(96,165,250,.18);
+    }
+    .pp-active{
+      border-color:rgba(94,234,212,.35);
+      background:rgba(94,234,212,.10);
+    }
+    .pp-user{
+      padding:10px 14px;border-radius:999px;border:1px solid rgba(255,255,255,.10);
+      background:rgba(255,255,255,.06);
+      color:rgba(255,255,255,.80);
+      font-weight:800;
+      display:none;
+      max-width:260px;
+      overflow:hidden;text-overflow:ellipsis;
+      white-space:nowrap;
+    }
+    .pp-crumbs{
+      margin-top:10px;
+      font-size:12.5px;
+      color:rgba(255,255,255,.70);
+      display:flex;gap:6px;flex-wrap:wrap;align-items:center;
+    }
+    .pp-crumbs a{color:rgba(94,234,212,.95);font-weight:800;text-decoration:none}
+    .pp-sep{opacity:.55}
   </style>
 </head>
+
 <body>
-<div class="wrap">
-  <div class="card">
-    <h2>ProfitPilot</h2>
-    <p class="small">Log in or create an account to start your 5-day free access.</p>
 
-    <label>Email</label>
-    <input id="email" type="email" placeholder="you@example.com" autocomplete="email">
+  <!-- SINGLE NAV (no duplicates) -->
+  <div class="pp-navwrap" role="navigation" aria-label="Primary">
+    <div class="pp-nav">
+      <div class="pp-left">
+        <a class="pp-btn" href="https://ukwebtools.com/">← Ukwebtools</a>
+        <a class="pp-btn" href="index.html">Home</a>
+        <a class="pp-btn" href="reviews.html">Reviews</a>
+        <a class="pp-btn" href="privacy.html">Privacy</a>
+        <a class="pp-btn" href="terms.html">Terms</a>
+        <a class="pp-btn" href="faq.html">FAQ</a>
+      </div>
 
-    <label>Password</label>
-    <input id="password" type="password" placeholder="••••••••" autocomplete="current-password">
+      <div class="pp-right">
+        <span class="pp-user" id="ppUserChip">Signed in</span>
 
-    <button class="btn primary" id="signup">Create account</button>
-    <button class="btn" id="login">Log in</button>
+        <!-- Signed OUT -->
+        <a class="pp-btn pp-active" id="ppLoginBtn" href="login.html">Log in</a>
+        <a class="pp-btn pp-primary" id="ppSignupBtn" href="signup.html">Sign up</a>
 
-    <div class="small" style="margin-top:10px">
-      <a href="reset.html">Forgot password?</a>
+        <!-- Signed IN -->
+        <a class="pp-btn pp-primary" id="ppOpenBtn" href="app.html" style="display:none">Open app</a>
+        <a class="pp-btn" id="ppLogoutBtn" href="#" style="display:none">Log out</a>
+      </div>
     </div>
 
-    <div class="small" id="msg">—</div>
+    <div class="pp-crumbs" aria-label="Breadcrumb">
+      <a href="https://ukwebtools.com/">Ukwebtools</a>
+      <span class="pp-sep">›</span>
+      <a href="index.html">ProfitPilot</a>
+      <span class="pp-sep">›</span>
+      <span>Log in</span>
+    </div>
 
-    <div class="small" style="margin-top:10px">
-      <a href="index.html">← Back to home</a> • <a href="https://ukwebtools.com/">Ukwebtools</a>
+    <script type="application/ld+json">
+    {
+      "@context":"https://schema.org",
+      "@type":"BreadcrumbList",
+      "itemListElement":[
+        {"@type":"ListItem","position":1,"name":"Ukwebtools","item":"https://ukwebtools.com/"},
+        {"@type":"ListItem","position":2,"name":"ProfitPilot","item":"https://profitpilot.ukwebtools.com/index.html"},
+        {"@type":"ListItem","position":3,"name":"Log in","item":"https://profitpilot.ukwebtools.com/login.html"}
+      ]
+    }
+    </script>
+  </div>
+
+  <div class="wrap">
+    <div class="card">
+      <h2>ProfitPilot</h2>
+      <p class="small">Log in to your account.</p>
+
+      <label>Email</label>
+      <input id="email" type="email" placeholder="you@example.com" autocomplete="email">
+
+      <label>Password</label>
+      <input id="password" type="password" placeholder="••••••••" autocomplete="current-password">
+
+      <button class="btn primary" id="login">Log in</button>
+      <a class="btn" href="signup.html" style="display:block;text-align:center">Create account</a>
+
+      <div class="small" style="margin-top:10px">
+        <a href="reset.html">Forgot password?</a>
+      </div>
+
+      <div class="small" id="msg">—</div>
+
+      <div class="small" style="margin-top:10px">
+        <a href="index.html">← Back to home</a> • <a href="https://ukwebtools.com/">Ukwebtools</a>
+      </div>
     </div>
   </div>
-</div>
 
 <script type="module">
   import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
 
   const SUPABASE_URL = "https://xsigsftvfknefpdfsyae.supabase.co";
   const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhzaWdzZnR2ZmtuZWZwZGZzeWFlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyNzY4NjksImV4cCI6MjA4NTg1Mjg2OX0.Jkkh9Jd46saYBVipN8bxbWhjmhG6mgaFgtTpirKUAWg";
-
   const supabase = createClient(SUPABASE_URL, SUPABASE_ANON);
 
   const msg = document.getElementById("msg");
@@ -138,32 +159,49 @@
 
   function setMsg(text){ msg.textContent = text; }
 
-  document.getElementById("signup").addEventListener("click", async () => {
-    const email = emailEl.value.trim();
-    const password = passwordEl.value;
+  // NAV auth UI
+  const userChip = document.getElementById("ppUserChip");
+  const loginBtn = document.getElementById("ppLoginBtn");
+  const signupBtn = document.getElementById("ppSignupBtn");
+  const openBtn = document.getElementById("ppOpenBtn");
+  const logoutBtn = document.getElementById("ppLogoutBtn");
 
-    if (!email) { setMsg("Please enter your email."); return; }
-    if (!password || password.length < 8) { setMsg("Password must be at least 8 characters."); return; }
+  async function refreshAuthUI(){
+    const { data: { session } } = await supabase.auth.getSession();
+    if (session?.user?.email){
+      userChip.style.display = "inline-flex";
+      userChip.textContent = session.user.email;
 
-    setMsg("Creating account…");
+      loginBtn.style.display = "none";
+      signupBtn.style.display = "none";
 
-    const { error } = await supabase.auth.signUp({
-      email,
-      password,
-      options: {
-        emailRedirectTo: "https://profitpilot.ukwebtools.com/login.html"
-      }
-    });
+      openBtn.style.display = "inline-flex";
+      logoutBtn.style.display = "inline-flex";
+    } else {
+      userChip.style.display = "none";
 
-    if (error) {
-      setMsg(error.message);
-      return;
+      loginBtn.style.display = "inline-flex";
+      signupBtn.style.display = "inline-flex";
+
+      openBtn.style.display = "none";
+      logoutBtn.style.display = "none";
     }
+  }
 
-    localStorage.setItem("pp_pending_email", email);
-    location.href = "verify.html";
+  logoutBtn.addEventListener("click", async (e)=>{
+    e.preventDefault();
+    await supabase.auth.signOut();
+    location.href = "login.html";
   });
 
+  // If already signed in, go to app
+  const { data: { session } } = await supabase.auth.getSession();
+  if (session?.user){ location.href = "app.html"; }
+
+  await refreshAuthUI();
+  supabase.auth.onAuthStateChange(() => refreshAuthUI());
+
+  // Login
   document.getElementById("login").addEventListener("click", async () => {
     const email = emailEl.value.trim();
     const password = passwordEl.value;
@@ -185,176 +223,3 @@
 </script>
 </body>
 </html>
-<!-- PROFITPILOT: UNIVERSAL NAV + BREADCRUMBS -->
-<style>
-  /* Keep styles scoped to nav so it won't break your existing CSS */
-  .pp-navwrap{max-width:1200px;margin:0 auto;padding:14px 16px;position:relative;z-index:50}
-  .pp-nav{display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap}
-  .pp-left,.pp-right{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
-  .pp-btn{
-    padding:10px 14px;border-radius:999px;border:1px solid rgba(16,24,40,.10);
-    background:#fff;font-weight:800;text-decoration:none;color:#0b1220;
-    box-shadow:0 8px 18px rgba(16,24,40,.06);
-    display:inline-flex;gap:8px;align-items:center;
-  }
-  .pp-btn:hover{transform:translateY(-1px)}
-  .pp-btn:active{transform:translateY(0)}
-  .pp-primary{
-    border:none;color:#fff;
-    background:linear-gradient(135deg,#0ea5a4,#4f46e5);
-    box-shadow:0 14px 28px rgba(79,70,229,.16);
-  }
-  .pp-active{
-    border-color:rgba(14,165,164,.35);
-    background:rgba(14,165,164,.08);
-  }
-  .pp-crumbs{
-    margin-top:10px;
-    font-size:12.5px;
-    color:rgba(16,24,40,.62);
-    display:flex;gap:6px;flex-wrap:wrap;align-items:center;
-  }
-  .pp-crumbs a{color:rgba(14,165,164,.95);font-weight:800;text-decoration:none}
-  .pp-sep{opacity:.55}
-  .pp-user{
-    padding:10px 14px;border-radius:999px;border:1px solid rgba(16,24,40,.10);
-    background:rgba(255,255,255,.75);
-    color:rgba(16,24,40,.72);
-    font-weight:800;
-    display:none;
-  }
-</style>
-
-<div class="pp-navwrap" role="navigation" aria-label="Primary">
-  <div class="pp-nav">
-    <!-- LEFT -->
-    <div class="pp-left">
-      <a class="pp-btn" href="https://ukwebtools.com/" data-nav="ukwebtools">← Ukwebtools</a>
-      <a class="pp-btn" href="index.html" data-nav="home">Home</a>
-      <a class="pp-btn" href="reviews.html" data-nav="reviews">Reviews</a>
-      <a class="pp-btn" href="privacy.html" data-nav="privacy">Privacy</a>
-      <a class="pp-btn" href="terms.html" data-nav="terms">Terms</a>
-      <a class="pp-btn" href="faq.html" data-nav="faq">FAQ</a>
-    </div>
-
-    <!-- RIGHT -->
-    <div class="pp-right">
-      <span class="pp-user" id="ppUserChip">Signed in</span>
-      <a class="pp-btn pp-primary" id="ppAuthBtn" href="login.html">Log in</a>
-      <a class="pp-btn" id="ppLogoutBtn" href="#" style="display:none">Log out</a>
-    </div>
-  </div>
-
-  <!-- Visible Breadcrumbs -->
-  <div class="pp-crumbs" aria-label="Breadcrumb">
-    <a href="https://ukwebtools.com/">Ukwebtools</a>
-    <span class="pp-sep">›</span>
-    <a href="index.html">ProfitPilot</a>
-    <span class="pp-sep">›</span>
-    <span id="ppCrumbCurrent">Page</span>
-  </div>
-
-  <!-- JSON-LD Breadcrumbs for SEO -->
-  <script id="ppBreadcrumbJson" type="application/ld+json"></script>
-</div>
-
-<script type="module">
-  import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
-
-  // ✅ REPLACE THESE TWO:
-  const SUPABASE_URL = "PASTE_YOUR_SUPABASE_URL_HERE";
-  const SUPABASE_ANON = "PASTE_YOUR_SUPABASE_ANON_KEY_HERE";
-
-  const supabase = createClient(SUPABASE_URL, SUPABASE_ANON);
-
-  // ---------- Active page highlighting ----------
-  const path = (location.pathname.split("/").pop() || "index.html").toLowerCase();
-  const map = {
-    "index.html":"home",
-    "reviews.html":"reviews",
-    "privacy.html":"privacy",
-    "terms.html":"terms",
-    "faq.html":"faq",
-    "login.html":"login",
-    "app.html":"app",
-    "reset.html":"reset",
-    "verify.html":"verify"
-  };
-  const activeKey = map[path] || "home";
-
-  // Highlight matching nav item if present
-  document.querySelectorAll(".pp-btn[data-nav]").forEach(a=>{
-    const key = a.getAttribute("data-nav");
-    if (key === activeKey) a.classList.add("pp-active");
-  });
-
-  // ---------- Breadcrumb text + JSON-LD ----------
-  const titles = {
-    home:"Home",
-    reviews:"Reviews",
-    privacy:"Privacy",
-    terms:"Terms",
-    faq:"FAQ",
-    login:"Log in",
-    app:"App",
-    reset:"Reset password",
-    verify:"Verify email"
-  };
-  const currentTitle = titles[activeKey] || "Page";
-  document.getElementById("ppCrumbCurrent").textContent = currentTitle;
-
-  const base = "https://profitpilot.ukwebtools.com/";
-  const crumbItems = [
-    { name:"Ukwebtools", item:"https://ukwebtools.com/" },
-    { name:"ProfitPilot", item: base + "index.html" },
-    { name: currentTitle, item: base + path }
-  ];
-
-  document.getElementById("ppBreadcrumbJson").textContent = JSON.stringify({
-    "@context":"https://schema.org",
-    "@type":"BreadcrumbList",
-    "itemListElement": crumbItems.map((c,i)=>({
-      "@type":"ListItem",
-      "position": i+1,
-      "name": c.name,
-      "item": c.item
-    }))
-  });
-
-  // ---------- Auth state: show email + logout ----------
-  const userChip = document.getElementById("ppUserChip");
-  const authBtn = document.getElementById("ppAuthBtn");
-  const logoutBtn = document.getElementById("ppLogoutBtn");
-
-  async function refreshAuthUI(){
-    const { data: { session } } = await supabase.auth.getSession();
-
-    if (session?.user?.email){
-      userChip.style.display = "inline-flex";
-      userChip.textContent = session.user.email;
-      authBtn.style.display = "none";
-      logoutBtn.style.display = "inline-flex";
-      // Make the "Home" button still go to landing; optional: direct logged-in users to app
-      // If you want Home button to open app when logged in, uncomment:
-      // document.querySelector('[data-nav="home"]').setAttribute("href","app.html");
-    } else {
-      userChip.style.display = "none";
-      authBtn.style.display = "inline-flex";
-      logoutBtn.style.display = "none";
-      authBtn.textContent = "Log in";
-      authBtn.setAttribute("href","login.html");
-    }
-  }
-
-  logoutBtn.addEventListener("click", async (e)=>{
-    e.preventDefault();
-    await supabase.auth.signOut();
-    location.href = "login.html";
-  });
-
-  // initial + live updates
-  await refreshAuthUI();
-  supabase.auth.onAuthStateChange(() => refreshAuthUI());
-</script>
-<!-- END PROFITPILOT NAV -->
-
